--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
 
 <head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-9887741933377417",
+      enable_page_level_ads: true
+    });
+  </script>
+
   <style>
     .header {
       border: solid 1px black;
