Added ad unit in promoted div

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <head>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-9887741933377417",
-      enable_page_level_ads: true
-    });
-  </script>
 
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9887741933377417",
+        enable_page_level_ads: true
+      });
+    </script>
+  </div>
+  
   <style>
     .header {
       border: solid 1px black;
@@ -96,7 +98,18 @@
           <p>2D Strategy RPG. <a href="https://store.steampowered.com/app/268500">X-Com 2</a> + <a href="https://store.steampowered.com/app/217200">Worms Armaggeddon</a></p>
         </div>
     </div>
-    <div class="promoted">p</div>
+    <div class="promoted">  
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- PlayWhat -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9887741933377417"
+             data-ad-slot="6110020468"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     <div class="footer">a</div>
   </div>
 </body>
