--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       });
     </script>
   </div>
-  
+
   <style>
     .header {
       border: solid 1px black;
@@ -99,17 +99,18 @@
         </div>
     </div>
     <div class="promoted">  
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- PlayWhat -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9887741933377417"
-             data-ad-slot="6110020468"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- PlayWhat -->
+      <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9887741933377417"
+            data-ad-slot="6110020468"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
     <div class="footer">a</div>
   </div>
 </body>
