--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
   <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-9887741933377417",
@@ -99,8 +98,7 @@
         </div>
     </div>
     <div class="promoted">  
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- PlayWhat -->
+      <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-9887741933377417"
@@ -109,7 +107,7 @@
             data-full-width-responsive="true"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      </script> -->
     </div>
     <div class="footer">a</div>
   </div>
