--- a/index.html
+++ b/index.html
@@ -63,16 +63,13 @@
         <div id="curatedGameDescription" class="description"></div>
     </div>
     <div id="promoted" class="promoted">  
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-9887741933377417"
-            data-ad-slot="6110020468"
-            data-ad-format="auto"
-            data-full-width-responsive="true"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-9887741933377417",
+            enable_page_level_ads: true
+          });
+        </script>
     </div>
     <div class="footer">Copyright 2018 Enric Masdeu</div>
   </div>
