--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>What to play on Steam?</title>
+  <link href="./favicon.ico" rel="icon" type="image/x-icon" />
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name=viewport content="width=device-width, initial-scale=1">
