--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     gtag('config', 'UA-126352481-1');
   </script>
 
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-9887741933377417",
+      enable_page_level_ads: true
+    });
+  </script>
+
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./tinyslide.css">
 
