Anonymize google analytics IPs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-126352481-1');
+    gtag('config', 'UA-126352481-1', { 'anonymize_ip': true });
   </script>
 
   <link rel="stylesheet" href="./style.css">
