Updated FTL description

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       document.getElementById("curatedLoading").style.display = "block";    
       document.getElementById("curated").style.display = "none"; 
 
-      const description =  '<p>Spacechip simulator roguelike-like</p>';
+      const description =  '<p>Spaceship captain simulator with roguelike elements. Assign your crew to different stations in battles and get through the procedurally generated scenarios.</p>';
       //getGame("322190", description, "curated");
 
       const url = "./curated.json";
